# python-sdk

./: .coveragerc  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  script.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
dymaxionlabs/: __init__.py  files.py  models.py  tasks.py  utils.py
src/dymaxionlabs/: __init__.py  file.py  files.py  jobs.py  model.py  models.py  tasks.py  upload.py  utils.py
src/terra/: __init__.py  file.py  model.py  skeleton.py
tests/: conftest.py  test_estimator.py  test_file.py  test_foo.py  test_skeleton.py  test_tasks.py
